@@ -26,6 +26,7 @@
     Thanks to Patrick Dehne for the investigation and patch!
   - New option for fuzzy seeking; trading sample accuracy for speed.
     With that option, seeks positions are guessed using mean framesize or the Xing VBR TOC is used.
+  - Feeder streams work with seek index now.
 - new project files to build/use libmpg123 with MSVC++ 2005 and 2008, provided by Patrick Dehne
 - fixed a regression that made the pause/loop mode in terminal control slowly go backwards
 
